force-app/main/default/objects/ErrorLog__c.object
<CustomObject>
    <fields>
        <fullName>Cause__c</fullName>
        <label>Cause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMLFieldNames__c</fullName>
        <label>DML Field Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMLFields__c</fullName>
        <label>DML Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMLId__c</fullName>
        <label>DML Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMLIndex__c</fullName>
        <label>DML Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMLMessage__c</fullName>
        <label>DML Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMLRecords__c</fullName>
        <label>DML Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMLStatusCode__c</fullName>
        <label>DML Status Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UNDEFINED</fullName>
                    <default>true</default>
                    <label>UNDEFINED</label>
                </value>
                <value>
                    <fullName>INVALID_FIELD_FOR_INSERT_UPDATE</fullName>
                </value>
                <value>
                    <fullName>REQUIRED_FIELD_MISSING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMLType__c</fullName>
        <label>DML Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UNDEFINED</fullName>
                    <default>true</default>
                    <label>UNDEFINED</label>
                </value>
                <value>
                    <fullName>INVALID_FIELD_FOR_INSERT_UPDATE</fullName>
                </value>
                <value>
                    <fullName>REQUIRED_FIELD_MISSING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies this record for purge</description>
        <inlineHelpText>Set to true to have this record deleted during batch processing</inlineHelpText>
        <label>Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ErrorStackTrace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ErrorSubtype__c</fullName>
        <label>Error Sub-type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Undefined</fullName>
                    <default>true</default>
                    <label>Undefined</label>
                </value>
                <value>
                    <fullName>System.DmlException</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ErrorType__c</fullName>
        <label>Error Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StackTraceString__c</fullName>
        <label>StackTraceString</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Object__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ErrorType__c</columns>
        <columns>ErrorSubtype__c</columns>
        <columns>StackTraceString__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EL-{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>