force-app/main/default/objects/ErrorLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Object__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>ErrorType__c</columns>
    <columns>ErrorSubtype__c</columns>
    <columns>StackTraceString__c</columns>
    <columns>Duplicate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>